<resources>
    <string name="app_name">Student Treasure</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Anjali Gupta</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation Header</string>
    <string name="logout">Logout</string>
    <string name="menu_home">Home</string>
    <string name="menu_about">About</string>
    <string name="menu_buy">Buy</string>
    <string name="menu_sell">Sell</string>
    <string name="chatitem">Chat</string>
    <!--suppress ExtraTranslation -->
    <string name="menu_faq">FAQ</string>
    <string name="chat">Chat</string>
    <string name="buy">Buy</string>
    <string name="product_description">Product Description...</string>
    <string name="price">Price:</string>
    <string name="product_name">Product Name</string>
    <string name="profile_image">profile image\n</string>
    <string name="username">Username</string>
    <string name="Username">Username</string>
    <string name="remove_product">remove</string>
    <string name="product_image">cart_image</string>
</resources>
