<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/img_2"

            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_buy"
            android:icon="@drawable/img_4"
            android:title="@string/menu_buy" />
        <item
            android:id="@+id/nav_sell"
            android:icon="@drawable/img_4"
            android:title="@string/menu_sell" />

        <!-- Add My Cart item -->


        <!-- Add FAQ item -->
        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/img_1"
            android:title="@string/menu_faq" />
    </group>
</menu>
