<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="8dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        app:cardCornerRadius="18dp"
        android:background="@drawable/item_border"
        android:elevation="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:id="@+id/image_product"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                />

            <TextView
                android:id="@+id/text_product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_name"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:textColor="@color/magenta"
                android:textStyle="bold"
                android:paddingTop="8dp" />

            <!-- TextView for Product Price -->
            <TextView
                android:id="@+id/text_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textColor="@color/pink"
                android:textStyle="bold"
                android:textSize="18sp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp" />

            <!-- TextView for Product Content -->
            <TextView
                android:id="@+id/text_product_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/teal"
                android:text="@string/product_description"
                android:elegantTextHeight="true"
                android:textSize="16sp"
                android:paddingBottom="8dp" />

            <!-- Button Layout -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end">

                <Button
                    android:id="@+id/buybtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/orange"
                    android:text="@string/buy"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginStart="8dp" />

                <Button
                    android:id="@+id/chatbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chat"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/green"
                    android:layout_marginStart="8dp" />

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
